# web-checker

./: .coveragerc  .gitignore  README.md  configs_exp.ini  pyproject.toml  requirements.txt
blogs/: urls.py  views.py
checker/: api.py  forms.py  functions.py  parse.py  parser.py  tests.py  urls.py  utils.py  views.py
checkweb/: apps.py  functions.py  views.py
dev_templates/: index.html  single.html
requirements/: common.txt  dev.txt  test.txt
src/: settings.py  urls.py  views.py  wsgi.py
src/scss/: watch.bat
src/settings/: common.py  dev.py  prod.py
src/static/css/: style.css
src/static/js/: result.js
src/static_venv/css/: style.css
src/templates/: base.html  footer.html  header.html
src/templates/checker/: index.html  result.html
templates/: base.html  footer.html  header.html  index.html  robots.txt  sitemap.xml
templates/checker/: contact.html
templates/checkweb/: about.html  check.html  contact.html  index.html
templates/errview/: 400.html  403.html  404.html  500.html
templates/tips/: tips1.html
templates/tmpart/: _footer.html  _navbar.html  _sidebar.html
templates/tools/: index.html
tips/: views.py
tools/: functions.py  urls.py  views.py
